Added Advanced Sessions Steam

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,4 +1,5 @@
-
+[/Script{AIModule.AISense_Sight]
+bAutoRegisterAllPawnsAsSources=false
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=3648AB9B4DE2C414A2576E8694943C4E
