--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -61,10 +61,13 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.RendererSettings]
 r.GenerateMeshDistanceFields=True
-r.DynamicGlobalIlluminationMethod=1
-r.ReflectionMethod=1
+r.DynamicGlobalIlluminationMethod=3
+r.ReflectionMethod=3
 r.Shadow.Virtual.Enable=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
+r.MSAACount=2
+r.Mobile.AntiAliasing=1
+r.AntiAliasingMethod=1
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
@@ -143,4 +146,7 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="Dynamic",NewName="WorldDynamic")
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
+
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=DynamicModifiersOnly
 
