First Multiplayer Setup

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -20,8 +20,9 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 AllowDownloads=false
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/lvl_testing.lvl_testing
+GameDefaultMap=/Game/Maps/lvl_connect.lvl_connect
 EditorStartupMap=/Game/Maps/lvl_testing.lvl_testing
+GameInstanceClass=/Game/Blueprints/gi_trapscape.gi_trapscape_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
