--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -153,4 +153,39 @@ ManualIPAddress=
 
 [/Script/NavigationSystem.RecastNavMesh]
 RuntimeGeneration=DynamicModifiersOnly
+TileSizeUU=400.000000
+bDrawPolyEdges=True
+DrawOffset=-2.000000
+CellSize=20.000000
+AgentRadius=45.000000
+AgentHeight=120.000000
+MinRegionArea=20.000000
+MaxSimplificationError=0.500000
+RegionPartitioning=ChunkyMonotone
+LayerPartitioning=ChunkyMonotone
+RegionChunkSplits=3
+LayerChunkSplits=2
+bMarkLowHeightAreas=False
+AgentMaxStepHeight=35.000000
+bFixedTilePoolSize=False
+CellHeight=30.000000
+
+[/Script/NavigationSystem.NavigationSystemV1]
+DefaultAgentName=None
+CrowdManagerClass=/Script/AIModule.CrowdManager
+bAutoCreateNavigationData=True
+bSpawnNavDataInNavBoundsLevel=False
+bAllowClientSideNavigation=False
+bShouldDiscardSubLevelNavData=True
+bTickWhilePaused=False
+bInitialBuildingLocked=False
+bSkipAgentHeightCheckWhenPickingNavData=False
+GeometryExportVertexCountWarningThreshold=1000000
+bGenerateNavigationOnlyAroundNavigationInvokers=True
+ActiveTilesUpdateInterval=1.000000
+DataGatheringMode=Instant
+DirtyAreaWarningSizeThreshold=-1.000000
+GatheringNavModifiersWarningLimitTime=-1.000000
++SupportedAgents=(Name="Default",Color=(B=75,G=56,R=0,A=164),DefaultQueryExtent=(X=50.000000,Y=50.000000,Z=250.000000),NavDataClass="/Script/NavigationSystem.RecastNavMesh",AgentRadius=35.000000,AgentHeight=144.000000,AgentStepHeight=-1.000000,NavWalkingSearchHeightScale=0.500000,PreferredNavData="/Script/NavigationSystem.RecastNavMesh",bCanCrouch=False,bCanJump=True,bCanWalk=True,bCanSwim=False,bCanFly=False)
+SupportedAgentsMask=(bSupportsAgent0=True,bSupportsAgent1=True,bSupportsAgent2=True,bSupportsAgent3=True,bSupportsAgent4=True,bSupportsAgent5=True,bSupportsAgent6=True,bSupportsAgent7=True,bSupportsAgent8=True,bSupportsAgent9=True,bSupportsAgent10=True,bSupportsAgent11=True,bSupportsAgent12=True,bSupportsAgent13=True,bSupportsAgent14=True,bSupportsAgent15=True)
 
