Some Important Settings

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,8 +1,8 @@
-[/Script{AIModule.AISense_Sight]
-bAutoRegisterAllPawnsAsSources=false
-
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=394C1AD94BBC21E853A8A1A5A16D29EE
+
+[/Script/AIModule.AISense_Sight]
+bAutoRegisterAllPawnsAsSources=false
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
