--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -159,8 +159,8 @@ DrawOffset=-2.000000
 CellSize=20.000000
 AgentRadius=45.000000
 AgentHeight=120.000000
-MinRegionArea=20.000000
-MaxSimplificationError=0.500000
+MinRegionArea=10.000000
+MaxSimplificationError=0.800000
 RegionPartitioning=ChunkyMonotone
 LayerPartitioning=ChunkyMonotone
 RegionChunkSplits=3
@@ -169,6 +169,10 @@ bMarkLowHeightAreas=False
 AgentMaxStepHeight=20.000000
 bFixedTilePoolSize=False
 CellHeight=35.000000
+bSortNavigationAreasByCost=True
+bFilterLowSpanFromTileCache=True
+VerticalDeviationFromGroundCompensation=0.000000
+TimeSliceFilterLedgeSpansMaxYProcess=13
 
 [/Script/NavigationSystem.NavigationSystemV1]
 DefaultAgentName=None
